// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBox Component should allow custom checked Icon 1`] = `
<Pressable
  accessibilityRole="checkbox"
  accessibilityState={
    Object {
      "checked": true,
    }
  }
  checkedIcon={
    <Image
      source={
        Object {
          "uri": "https://image.ibb.co/jcY95H/checked.png",
        }
      }
      style={
        Object {
          "height": 30,
          "width": 30,
        }
      }
    />
  }
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#ffffff",
      "margin": 5,
      "marginLeft": 10,
      "marginRight": 10,
      "padding": 10,
    }
  }
  testID="checkbox"
  uncheckedIcon={
    <Image
      source={
        Object {
          "uri": "https://image.ibb.co/fda0Cx/no_check.png",
        }
      }
      style={
        Object {
          "height": 30,
          "width": 30,
        }
      }
    />
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <CheckBoxIcon
      checked={true}
      checkedColor="#2089dc"
      checkedIcon={
        <Image
          source={
            Object {
              "uri": "https://image.ibb.co/jcY95H/checked.png",
            }
          }
          style={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
      }
      uncheckedIcon={
        <Image
          source={
            Object {
              "uri": "https://image.ibb.co/fda0Cx/no_check.png",
            }
          }
          style={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
      }
    />
  </View>
</Pressable>
`;

exports[`CheckBox Component should allow custom checked Icon when unchecked 1`] = `
<Pressable
  accessibilityRole="checkbox"
  accessibilityState={
    Object {
      "checked": false,
    }
  }
  checkedIcon={
    <Image
      source={
        Object {
          "uri": "https://image.ibb.co/jcY95H/checked.png",
        }
      }
      style={
        Object {
          "height": 30,
          "width": 30,
        }
      }
    />
  }
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#ffffff",
      "margin": 5,
      "marginLeft": 10,
      "marginRight": 10,
      "padding": 10,
    }
  }
  testID="checkbox"
  uncheckedIcon={
    <Image
      source={
        Object {
          "uri": "https://image.ibb.co/fda0Cx/no_check.png",
        }
      }
      style={
        Object {
          "height": 30,
          "width": 30,
        }
      }
    />
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <CheckBoxIcon
      checked={false}
      checkedColor="#2089dc"
      checkedIcon={
        <Image
          source={
            Object {
              "uri": "https://image.ibb.co/jcY95H/checked.png",
            }
          }
          style={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
      }
      uncheckedIcon={
        <Image
          source={
            Object {
              "uri": "https://image.ibb.co/fda0Cx/no_check.png",
            }
          }
          style={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
      }
    />
  </View>
</Pressable>
`;

exports[`CheckBox Component should allow passing props to the title 1`] = `
<Pressable
  accessibilityRole="checkbox"
  accessibilityState={
    Object {
      "checked": true,
    }
  }
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#ffffff",
      "margin": 5,
      "marginLeft": 10,
      "marginRight": 10,
      "padding": 10,
    }
  }
  testID="checkbox"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <CheckBoxIcon
      checked={true}
      checkedColor="#2089dc"
    />
    <Themed.Text
      numberOfLines={2}
      style={
        Object {
          "color": "#43484d",
          "fontWeight": "bold",
          "marginLeft": 10,
          "marginRight": 10,
        }
      }
      testID="checkboxTitle"
    >
      Yea
    </Themed.Text>
  </View>
</Pressable>
`;

exports[`CheckBox Component should render title in Text 1`] = `
<Pressable
  accessibilityRole="checkbox"
  accessibilityState={
    Object {
      "checked": true,
    }
  }
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#ffffff",
      "margin": 5,
      "marginLeft": 10,
      "marginRight": 10,
      "padding": 10,
    }
  }
  testID="checkbox"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <CheckBoxIcon
      checked={true}
      checkedColor="#2089dc"
    />
    <Themed.Text
      style={
        Object {
          "color": "#43484d",
          "fontWeight": "bold",
          "marginLeft": 10,
          "marginRight": 10,
        }
      }
      testID="checkboxTitle"
    >
      Custom Text
    </Themed.Text>
  </View>
</Pressable>
`;

exports[`CheckBox Component should render with icon and checked 1`] = `
<Pressable
  accessibilityRole="checkbox"
  accessibilityState={
    Object {
      "checked": false,
    }
  }
  iconType="font-awesome"
  style={
    Object {
      "backgroundColor": "red",
      "borderColor": "#ffffff",
      "margin": 5,
      "marginLeft": 10,
      "marginRight": 10,
      "padding": 10,
    }
  }
  testID="checkbox"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <CheckBoxIcon
      checked={false}
      checkedColor="red"
      iconType="font-awesome"
    />
  </View>
</Pressable>
`;

exports[`CheckBox Component should render with icon and iconRight 1`] = `
<Pressable
  accessibilityRole="checkbox"
  accessibilityState={
    Object {
      "checked": false,
    }
  }
  iconType="font-awesome"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#ffffff",
      "margin": 5,
      "marginLeft": 10,
      "marginRight": 10,
      "padding": 10,
    }
  }
  testID="checkbox"
  uncheckedColor="blue"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <CheckBoxIcon
      checked={false}
      checkedColor="#2089dc"
      iconType="font-awesome"
      uncheckedColor="blue"
    />
  </View>
</Pressable>
`;

exports[`CheckBox Component should render with textStyle and fontFamily 1`] = `
<Pressable
  accessibilityRole="checkbox"
  accessibilityState={
    Object {
      "checked": true,
    }
  }
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#ffffff",
      "margin": 5,
      "marginLeft": 10,
      "marginRight": 10,
      "padding": 10,
    }
  }
  testID="checkbox"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <CheckBoxIcon
      checked={true}
      checkedColor="#2089dc"
    />
    <Themed.Text
      style={
        Object {
          "color": "red",
          "fontFamily": "serif",
          "fontWeight": "bold",
          "marginLeft": 10,
          "marginRight": 10,
        }
      }
      testID="checkboxTitle"
    >
      Custom Text
    </Themed.Text>
  </View>
</Pressable>
`;

exports[`CheckBox Component should render with wrapperStyle 1`] = `
<Pressable
  accessibilityRole="checkbox"
  accessibilityState={
    Object {
      "checked": true,
    }
  }
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#ffffff",
      "margin": 5,
      "marginLeft": 10,
      "marginRight": 10,
      "padding": 10,
    }
  }
  testID="checkbox"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "red",
        "flexDirection": "row",
      }
    }
  >
    <CheckBoxIcon
      checked={true}
      checkedColor="#2089dc"
    />
    <Themed.Text
      style={
        Object {
          "color": "#43484d",
          "fontWeight": "bold",
          "marginLeft": 10,
          "marginRight": 10,
        }
      }
      testID="checkboxTitle"
    >
      Custom Text
    </Themed.Text>
  </View>
</Pressable>
`;

exports[`CheckBox Component should render without issues 1`] = `
<Pressable
  accessibilityRole="checkbox"
  accessibilityState={
    Object {
      "checked": false,
    }
  }
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#ffffff",
      "margin": 5,
      "marginLeft": 10,
      "marginRight": 10,
      "padding": 10,
    }
  }
  testID="checkbox"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <CheckBoxIcon
      checked={false}
      checkedColor="#2089dc"
    />
  </View>
</Pressable>
`;
